--- a/listComprehension.ipynb
+++ b/listComprehension.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "listComprehension.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNjPD4V0D160MMCv4WbK1Nv",
+      "authorship_tag": "ABX9TyOMPvbM48Bg+F66EH3QPC5X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,35 +27,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UxzNcH2Xq68t",
+        "id": "rbst0bay5Grr",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "6c64907c-3f36-4c80-ab41-f5a7f858d1e8"
+        "outputId": "5f1b2b2d-51c0-413d-a088-fefd5513ff2b"
       },
       "source": [
-        "sentence = \"the quick brown fox jumps over the lazy dog\"\n",
-        "words = sentence.split()\n",
-        "word_lengths = []\n",
-        "for word in words:\n",
-        "      if word != \"the\":\n",
-        "          word_lengths.append(len(word))\n",
-        "print(words)\n",
-        "print(word_lengths)"
+        "actor = {\"name\": \"John Cleese\", \"rank\": \"awesome\"}\n",
+        "\n",
+        "def get_last_name():\n",
+        "    return actor[\"name\"].split()[1]\n",
+        "\n",
+        "get_last_name()\n",
+        "print(\"All exceptions caught! Good job!\")\n",
+        "print(\"The actor's last name is %s\" % get_last_name())"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "['the', 'quick', 'brown', 'fox', 'jumps', 'over', 'the', 'lazy', 'dog']\n",
-            "[5, 5, 3, 5, 4, 4, 3]\n"
+            "All exceptions caught! Good job!\n",
+            "The actor's last name is Cleese\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hfTaYHt_5-aP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v7Ll_lNN5_gY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
